Fix Inventory spacing on mobile - add 15px left padding when sidebar expanded

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2299,7 +2299,7 @@ html.sidebar-collapsed .admin-sidebar .px-lg-3 {
     }
 
     html.sidebar-expanded .admin-content {
-        padding-left: 0 !important;
+        padding-left: 15px !important;
         padding-right: 10px !important;
     }
 
